# tch-rs

./: .clang-format  .gitignore  Cargo.toml
src/: lib.rs
src/nn/: var_store.rs
src/tensor/: mod.rs  npy.rs
src/wrappers/: cuda.rs  custom_function.rs  device.rs  mod.rs  scalar.rs  tensor.rs
src/wrappers/cuda/: cuda_event.rs  cuda_stream.rs  device_stream.rs  graph.rs  memory.rs  precision_reduction.rs  tensor_float_32.rs
tests/: tensor_tests.rs
torch-sys/: build.rs
torch-sys/libtch/: CMakeLists.txt  torch_api.cpp  torch_api.h  torch_cuda_stream.cpp  torch_cuda_stream.h  torch_custom_function.cpp  torch_custom_function.h
torch-sys/src/: cuda.rs  cuda_stream_ffi.rs  custom_function_ffi.rs  lib.rs
