[package]
authors = ["Laurent Mazare <lmazare@gmail.com>"]
edition = "2018"
name = "tch"
version = "0.10.2"

categories = ["science"]
description = "Rust wrappers for the PyTorch C++ api (libtorch)."
keywords = ["pytorch", "deep-learning", "machine-learning"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/LaurentMazare/tch-rs"

exclude = [
  "examples/stable-diffusion/media/*",
]

[dependencies]
half = "1.6"
lazy_static = "1.3.0"
libc = "0.2.0"
ndarray = "0.15"
rand = "0.8"
thiserror = "1"
torch-sys = {version = "0.10.2", path = "torch-sys"}
zip = "0.6"

cpython = {version = "0.2.0", optional = true}
paste = "1"
regex = {version = "1.6.0", optional = true}

[dev-dependencies]
anyhow = "1"
approx = "0"

[workspace]
members = ["torch-sys"]

[features]
cuda-tests = []
default = ["torch-sys/download-libtorch"]
doc-only = ["torch-sys/doc-only"]
python = ["cpython"]

[package.metadata.docs.rs]
features = ["doc-only"]

[[example]]
name = "reinforcement-learning"
required-features = ["python"]

[[example]]
name = "stable-diffusion"
required-features = ["regex"]
